# publishing_platform

./: Anchor.toml  README.md
programs/marketplace/src/: lib.rs
programs/marketplace/src/contexts/: init.rs  listing.rs  purchase.rs
programs/marketplace/src/state/: marketplace.rs
programs/minter/: Cargo.toml
programs/minter/src/: lib.rs
programs/minter/src/contexts/: mint_nft.rs  verify_collection.rs
programs/publishing-platform/: Cargo.toml
programs/publishing-platform/src/: errors.rs  lib.rs
programs/publishing-platform/src/contexts/: add_chapter.rs  create_account.rs  create_book.rs  create_exclusive_content.rs  create_reader_account.rs  create_writer_account.rs  initialize_platform.rs  mod.rs  submit_review.rs  tip_writer.rs  upload_content.rs  verify_content_access.rs
programs/publishing-platform/src/state/: admin.rs  content.rs  mod.rs  platform_account.rs  review.rs  user_account.rs
tests/: marketplace.ts  minter.ts  publishing-platform.ts  publishing-workflow.ts
